// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interweave allow list doesnt filter invalid tags and attributes when disabled 1`] = `
<Interweave
  allowAttributes
  allowElements
  content="<div bgcolor="black">
    <font color="red">Outdated font.</font>
    <script type="text/javascript"></script>
    <p align="center">More text <strike>with outdated stuff</strike>.</p>
  </div>"
>
  <Element attributes={{ bgcolor: "black" }} tagName="div">
    <div bgcolor="black">
      
  
      <Element attributes={{ color: "red" }} tagName="font">
        <font color="red">
          Outdated font.
        </font>
      </Element>
      
  
      
  
      <Element attributes={{ align: "center" }} tagName="p">
        <p align="center">
          More text 
          <Element tagName="strike">
            <strike>with outdated stuff</strike>
          </Element>
          .
        </p>
      </Element>
      

    </div>
  </Element>
</Interweave>
`;

exports[`Interweave allow list filters invalid tags and attributes 1`] = `
<Interweave
  content="<div bgcolor="black">
    <font color="red">Outdated font.</font>
    <script type="text/javascript"></script>
    <p align="center">More text <strike>with outdated stuff</strike>.</p>
  </div>"
>
  <Element tagName="div">
    <div>
      
  
      Outdated font.
      
  
      
  
      <Element tagName="p">
        <p>More text with outdated stuff.</p>
      </Element>
      

    </div>
  </Element>
</Interweave>
`;

exports[`Interweave allows empty \`content\` to be passed 1`] = `<Interweave />`;

exports[`Interweave allows empty \`content\` to be passed when using callbacks 1`] = `<Interweave onBeforeParse={onBeforeParse()} />`;

exports[`Interweave block list filters blocked tags and attributes 1`] = `
<Interweave
  block={[ "aside", "a" ]}
  content="<main role="main">
    Main content
    <div>
      <a href="#">Link</a>
      <span class="foo">String</span>
    </div>
  </main>
  <aside id="sidebar">
    Sidebar content
  </aside>"
>
  <Element attributes={{ role: "main" }} tagName="main">
    <main role="main">
      
  Main content
  
      <Element tagName="div">
        <div>
          
    
          Link
          
    
          <Element attributes={{ className: "foo" }} tagName="span">
            <span className="foo">
              String
            </span>
          </Element>
          
  
        </div>
      </Element>
      

    </main>
  </Element>
  

  
  Sidebar content

</Interweave>
`;

exports[`Interweave can pass matchers through props 1`] = `
<Interweave content="Foo [bar] Bar Baz" matchers={[ <span /> ]}>
  Foo 
  <Element customProp="bar" tagName="span">
    <span>BAR</span>
  </Element>
   Bar Baz
</Interweave>
`;

exports[`Interweave can pass transformers through props 1`] = `
<Interweave content="Foo <a href="foo.com">Bar</a> Baz" transformers={[ <a />, <* /> ]}>
  Foo 
  <Element attributes={{ href: "bar.net", target: "_blank" }} tagName="a">
    <a href="bar.net" target="_blank">
      Bar
    </a>
  </Element>
   Baz
</Interweave>
`;

exports[`Interweave interleaving renders bold in italic 1`] = `
<Interweave content="This should be _**bold and italic**_." matchers={[ <b />, <i /> ]}>
  This should be 
  <i>
    <b>bold and italic</b>
  </i>
  .
</Interweave>
`;

exports[`Interweave interleaving renders italic in bold 1`] = `
<Interweave content="This should be **_italic and bold_**." matchers={[ <b />, <i /> ]}>
  This should be 
  <b>
    <i>italic and bold</i>
  </b>
  .
</Interweave>
`;

exports[`Interweave interleaving renders them separately 1`] = `
<Interweave content="This should be **bold** and this _italic_." matchers={[ <b />, <i /> ]}>
  This should be 
  <b>bold</b>
   and this 
  <i>italic</i>
  .
</Interweave>
`;

exports[`Interweave line breaks converts line breaks 1`] = `
<Interweave
  content="Foo
  Bar"
>
  Foo
  <Element selfClose tagName="br">
    <br />
  </Element>
  Bar
</Interweave>
`;

exports[`Interweave line breaks converts line breaks if \`noHtmlExceptInternals\` is true 1`] = `
<Interweave
  noHtmlExceptInternals
  content="Foo
  Bar"
>
  Foo
  <Element selfClose tagName="br">
    <br />
  </Element>
  Bar
</Interweave>
`;

exports[`Interweave line breaks doesnt convert line breaks if \`disableLineBreaks\` is true 1`] = `
<Interweave
  disableLineBreaks
  content="Foo
  Bar"
>
  Foo
Bar
</Interweave>
`;

exports[`Interweave line breaks doesnt convert line breaks if \`noHtml\` is true 1`] = `
<Interweave
  noHtml
  content="Foo
  Bar"
>
  Foo
Bar
</Interweave>
`;

exports[`Interweave line breaks doesnt convert line breaks if it contains HTML 1`] = `
<Interweave
  content="Foo
  <br/>Bar"
>
  Foo

  <Element selfClose tagName="br">
    <br />
  </Element>
  Bar
</Interweave>
`;

exports[`Interweave parseMarkup() can modify the markup using onBeforeParse 1`] = `
<Interweave content="Foo <b>Bar</b> Baz" onBeforeParse={onBeforeParse()}>
  Foo 
  <Element tagName="i">
    <i>Bar</i>
  </Element>
   Baz
</Interweave>
`;

exports[`Interweave parseMarkup() can modify the tree using onAfterParse 1`] = `
<Interweave content="Foo <b>Bar</b> Baz" onAfterParse={onAfterParse()}>
  Foo 
  <Element tagName="b">
    <b>Bar</b>
  </Element>
   Baz
  <Element tagName="u">
    <u>Qux</u>
  </Element>
</Interweave>
`;

exports[`Interweave parseMarkup() errors if onBeforeParse doesnt return a string 1`] = `"Interweave \`onBeforeParse\` must return a valid HTML string."`;

exports[`Interweave parsing and rendering handles void elements correctly 1`] = `
<Interweave content="This has line breaks.<br>Horizontal rule.<hr />An image.<img src="http://domain.com/image.jpg" />" tagName="div">
  This has line breaks.
  <Element selfClose tagName="br">
    <br />
  </Element>
  Horizontal rule.
  <Element selfClose tagName="hr">
    <hr />
  </Element>
  An image.
  <Element selfClose attributes={{ src: "http://domain.com/image.jpg" }} tagName="img">
    <img src="http://domain.com/image.jpg" />
  </Element>
</Interweave>
`;

exports[`Interweave renders using a custom container element 1`] = `
<Interweave content="<li>Foo</li><li>Bar</li><li>Baz</li>" tagName="ul">
  <Element tagName="li">
    <li>Foo</li>
  </Element>
  <Element tagName="li">
    <li>Bar</li>
  </Element>
  <Element tagName="li">
    <li>Baz</li>
  </Element>
</Interweave>
`;

exports[`Interweave transform prop allows blocked 1`] = `
<Element tagName="span">
  <span>
    Foo 
    <Dummy>
      <iframe title="foo" />
    </Dummy>
     Bar
  </span>
</Element>
`;

exports[`Interweave transform prop replaces the element 1`] = `
<Element tagName="span">
  <span>
    Foo 
    <Dummy>
      <div />
    </Dummy>
     Bar
  </span>
</Element>
`;

exports[`Interweave transform prop skips the element 1`] = `
<Element tagName="span">
  <span>Foo  Bar</span>
</Element>
`;

exports[`Interweave transform prop skips transforming tags outside the allowList when transformOnlyAllowList is true 1`] = `
<Element tagName="span">
  <span>
    
        Hello, https://test.example.com 
    <a href="http://example.com">
      hi
    </a>
     test@example.com test@example.com 
    <Element selfClose tagName="br">
      <br />
    </Element>
    
        at 8:58 AM Someone 
     wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    Hi, 
    <Element selfClose tagName="br">
      <br />
    </Element>
    :  Czech, English, Français,
        Português, Español
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    Someone
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Jun 30, 2021, at 9:40 AM, Someone 
    
        wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    Hello Name,
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    , . 
    <Element selfClose tagName="br">
      <br />
    </Element>
    , . 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    SomeDomain.dev
    <Element selfClose tagName="br">
      <br />
    </Element>
    P: 999-999-9999
    <Element selfClose tagName="br">
      <br />
    </Element>
    
        Português, Español
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Tue, Jun 29, 2021 at 2:05 PM Someone 
    
        
     wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    Proin consequat ut metus sit amet cursus.
    <Element selfClose tagName="br">
      <br />
    </Element>
    
        
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    Someone
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Jun 29, 2021, at 12:15 PM, Someone 
     wrote:
        
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    No mam,
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    , . 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    SomeDomain.dev
    <Element selfClose tagName="br">
      <br />
    </Element>
    P: 999-999-9999
    <Element selfClose tagName="br">
      <br />
    </Element>
    Please, let us
        
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Tue, Jun 29, 2021 at 9:54 AM Someone Else 
     wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    ,
        . 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    Someone Else
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Jun 29, 2021, at 9:41 AM, Someone 
    
        
     wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    Good Morning, 
    <Element selfClose tagName="br">
      <br />
    </Element>
    , . 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    Thank you, 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    Someone
        Else
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Jun 27, 2021, at 3:56 PM, Someone 
     wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    , .
        
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    SomeDomain.dev
    <Element selfClose tagName="br">
      <br />
    </Element>
    P: 999-999-9999
    <Element selfClose tagName="br">
      <br />
    </Element>
    , Português, Español
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Sun, Jun 27,
        2021 at 12:09 PM Someone 
     wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    , . 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    
        
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    Someone Else
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Jun 27, 2021, at
        11:28 AM, Someone 
     wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    Hello,
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    , . 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    
        SomeDomain.dev
    <Element selfClose tagName="br">
      <br />
    </Element>
    P: 999-999-9999
    <Element selfClose tagName="br">
      <br />
    </Element>
    , Português, Español
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Sat, Jun 26, 2021 at
        3:25 PM Someone 
     wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    , . 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    SomeDomain.dev
    <Element selfClose tagName="br">
      <br />
    </Element>
    P:
        999-999-9999
    <Element selfClose tagName="br">
      <br />
    </Element>
    , Português, Español
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Sat, Jun 26, 2021 at 3:21 PM Someone
        
     wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    Hello Name,
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    , . 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    , . 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    , . 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    , .
        
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    SomeDomain.dev
    <Element selfClose tagName="br">
      <br />
    </Element>
    P: 999-999-9999
    <Element selfClose tagName="br">
      <br />
    </Element>
    , Português, Español
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Sat, Jun 26,
        2021 at 1:51 AM Someone 
     wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    Hello,
    <Element selfClose tagName="br">
      <br />
    </Element>
    , . 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    Someone
        Else 
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    (999)999-9999
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Jun 25, 2021, at 3:56 PM, Someone 
    
        wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    Please contact the maintenance supervisor regarding this at 19999999999 
    <Element selfClose tagName="br">
      <br />
    </Element>
    
        
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Fri, Jun 25, 2021, 10:26 AM Someone 
     wrote:
    <Element selfClose tagName="br">
      <br />
    </Element>
    rttitor semper.
        
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    On Jun 24, 2021, at 10:16 AM, Someone 
     wrote:
        
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    Hello,
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    , . .
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    SomeDomain.dev
    <Element selfClose tagName="br">
      <br />
    </Element>
    P: 999-999-9999
    <Element selfClose tagName="br">
      <br />
    </Element>
    , Português,
        Español
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    <Element selfClose tagName="br">
      <br />
    </Element>
    
      
  </span>
</Element>
`;
